--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -24,11 +24,6 @@
       "collapsed_sections": [
         "htjoBLwiD0_F",
         "xo76nR8rD0_0",
-        "wfWzOuztD0_0",
-        "PQg-MLkGD0_-",
-        "KYeRqavFD1AD",
-        "KzmWbEltD1AD",
-        "SWlE6VTBD1AE",
         "oWbWyDd0D1AI",
         "yYNqIHJBD1AK",
         "_z0JySuqD1AL",
@@ -203,7 +198,7 @@
         "# pd.set_option('display.max_rows', 300)\n",
         "# pd.set_option('display.max_columns', 300)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +209,7 @@
       "source": [
         "dataset = pd.read_csv('db.csv', sep = ';')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,14 +219,14 @@
         "id": "mOV1rCA6D0_A",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 641
+          "height": 424
         },
         "outputId": "4ae77e6b-b185-46a7-92f6-88a2e8e923e5"
       },
       "source": [
         "dataset"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +501,7 @@
       "source": [
         "dataset.dtypes"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +535,7 @@
       "source": [
         "dataset[['Quilometragem','Valor']].describe()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +716,7 @@
       "source": [
         "dataset.info()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +779,7 @@
       "source": [
         "()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +805,7 @@
       "source": [
         "1, 2, 3"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +833,7 @@
         "valor = 153000\n",
         "(nome, valor)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +860,7 @@
         "nomes_carros = tuple(['Jetta Variant', 'Passat', 'Crossfox', 'DS5'])\n",
         "nomes_carros"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +886,7 @@
       "source": [
         "type(nomes_carros)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -927,7 +922,7 @@
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
         "nomes_carros"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +949,7 @@
       "source": [
         "nomes_carros[0]"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +979,7 @@
       "source": [
         "nomes_carros[1]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1009,7 @@
       "source": [
         "nomes_carros[-1]"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1038,7 @@
       "source": [
         "nomes_carros[1:3]"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1065,7 @@
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5', ('Fusca', 'Gol', 'C4'))\n",
         "nomes_carros"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1091,7 @@
       "source": [
         "nomes_carros[-1]"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1123,7 +1118,7 @@
       "source": [
         "nomes_carros[-1][1]"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,7 +1157,7 @@
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
         "nomes_carros"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1189,7 +1184,7 @@
         "for item in nomes_carros:\n",
         "  print(item)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1220,7 @@
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
         "nomes_carros"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1247,7 +1242,7 @@
       "source": [
         "carro_1, carro_2, carro_3, carro_4 = nomes_carros"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1263,7 +1258,7 @@
       "source": [
         "carro_1"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1288,7 @@
       "source": [
         "carro_2"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1323,7 +1318,7 @@
       "source": [
         "carro_3"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1353,7 +1348,7 @@
       "source": [
         "carro_4"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1378,7 +1373,7 @@
       "source": [
         "_, A, _, B = nomes_carros"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1394,7 +1389,7 @@
       "source": [
         "A"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1419,7 @@
       "source": [
         "B"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1449,7 +1444,7 @@
       "source": [
         "_, C, *_ = nomes_carros"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1465,7 +1460,7 @@
       "source": [
         "C"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,7 +1501,7 @@
         "carros = ['Jetta Variant', 'Passat', 'Crossfox', 'DS5']\n",
         "carros"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1528,7 @@
         "valores = [88078.64, 106161.94, 72832.16, 124549.07]\n",
         "valores"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1554,7 @@
       "source": [
         "list(zip(carros, valores))"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1589,7 +1584,7 @@
         "for item in zip(carros,valores):\n",
         "  print(item)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1616,7 +1611,7 @@
         "for carro, valor in zip(carros,valores):\n",
         "  print(carro, valor)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1644,7 +1639,7 @@
         "  if(valor > 100000):\n",
         "    print(carro)"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,71 +1683,161 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SuPcV9v6D0_0"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YIFVkWT6D0_1"
+        "id": "YIFVkWT6D0_1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d790875-eec8-4295-c81e-c476fe1cbf92"
       },
       "source": [
         "carros = ['Jetta Variant', 'Passat', 'Crossfox']\n",
         "carros"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Jetta Variant', 'Passat', 'Crossfox']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LHiBn3-D0_2"
+        "id": "2LHiBn3-D0_2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad4d5946-4d17-47bd-9de1-6f0c38370ad2"
       },
       "source": [
         "valores = [88078.64, 106161.94, 72832.16]\n",
         "valores"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[88078.64, 106161.94, 72832.16]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YxLAx_sqD0_4"
+        "id": "YxLAx_sqD0_4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2f0f85b-e294-4571-91c9-3a668298714a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "carros.index('Passat')"
+      ],
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WITNWExID0_7"
+        "id": "WITNWExID0_7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d4de55e-dbb4-4247-deb1-b3c64cf3416a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "valores[carros.index('Passat')]"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "106161.94"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bHNqoDbTD0_8"
+        "id": "bHNqoDbTD0_8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dce82a7f-6ad2-40f1-93c2-163bc4cd3830"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados = {'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}\n",
+        "dados"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "type(dados)"
+      ],
       "metadata": {
-        "id": "4FyQgmcAD0_9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jk7b0NFqpmTR",
+        "outputId": "b19cd834-d1a1-4b87-8167-e2dcf503a0fc"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1766,20 +1851,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iB4Q_gbND0__"
+        "id": "iB4Q_gbND0__",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1ef06af5-8003-4838-e38a-27ce7e98faae"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "list(zip(carros,valores))"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Jetta Variant', 88078.64), ('Passat', 106161.94), ('Crossfox', 72832.16)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mIgZqdKKD1AA"
+        "id": "mIgZqdKKD1AA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cfb6bb6c-0be5-4124-ffea-4c3afa9bceb7"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados = dict(zip(carros,valores))\n",
+        "dados"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
     },
     {
       "cell_type": "markdown",
