--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -24,9 +24,6 @@
       "collapsed_sections": [
         "htjoBLwiD0_F",
         "xo76nR8rD0_0",
-        "oWbWyDd0D1AI",
-        "yYNqIHJBD1AK",
-        "_z0JySuqD1AL",
         "FodJVx5sD1AP",
         "7pqdPOkYD1AP",
         "JLs5c0DeD1AR",
@@ -1924,11 +1921,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hFFDz6wKD1AD"
+        "id": "hFFDz6wKD1AD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89c3b2ba-07e7-41e3-9b25-9faaa130537d"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados['Passat']"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "106161.94"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1944,29 +1958,80 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Iy88SxBtD1AE"
+        "id": "Iy88SxBtD1AE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe438273-2030-41a2-f4fd-56b2312f933c"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "'Passat' in dados"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oma56NkAD1AF"
+        "id": "Oma56NkAD1AF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a16b816-09bc-49ca-a3ee-d072916ca49f"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "'Fusca' in dados"
+      ],
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yS2U-_8gD1AG"
+        "id": "yS2U-_8gD1AG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dbc8c543-270e-4ad9-ee21-b9a83ec4f894"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "'Fusca' not in dados"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1982,11 +2047,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "k08YkCc1D1AJ"
+        "id": "k08YkCc1D1AJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78f33df2-4de2-4ccb-8c87-ec31e76227b3"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "len(dados)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2004,18 +2086,40 @@
       "metadata": {
         "id": "5jj3i52bD1AK"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "dados['DS5'] = 124549.07"
+      ],
+      "execution_count": 112,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y6rso5hLD1AL"
+        "id": "y6rso5hLD1AL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bd88a34-43e0-4fee-e249-6a611b5a110c"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Passat': 106161.94,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2033,18 +2137,37 @@
       "metadata": {
         "id": "PPfh6sfID1AM"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "del dados['Passat']"
+      ],
+      "execution_count": 114,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BtjGpXtGD1AN"
+        "id": "BtjGpXtGD1AN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "321bfd9d-2e13-4ae1-cd5d-e847ab02ff61"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados"
+      ],
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16, 'DS5': 124549.07}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
     },
     {
       "cell_type": "markdown",
