--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -24,15 +24,6 @@
       "collapsed_sections": [
         "htjoBLwiD0_F",
         "xo76nR8rD0_0",
-        "FodJVx5sD1AP",
-        "7pqdPOkYD1AP",
-        "JLs5c0DeD1AR",
-        "mNODkmHCD1AV",
-        "Q5J0R7d3D1Ag",
-        "QhoSRfPsD1Ai",
-        "E-agaqakD1Ai",
-        "qFj6Cc7dD1Ak",
-        "-NGRwX0AD1Al",
         "-q3AlSg3D1Aq",
         "5CfEcU58D1Aq",
         "6w62Sl5ZD1A0",
@@ -2192,20 +2183,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DUySYxKQD1AQ"
+        "id": "DUySYxKQD1AQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76e9583b-40cb-4404-eec4-ce7c43c2508c"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados"
+      ],
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16, 'DS5': 124549.07}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DLsqp71cD1AR"
+        "id": "DLsqp71cD1AR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18dbdbc0-0bce-426e-86fe-2788c0dd4154"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados.update({'Passat': 106161.94})\n",
+        "dados"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.94}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados.update({'Passat': 106161.95, 'Fusca': 150000})\n",
+        "dados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f5tRzZqdultt",
+        "outputId": "84c4eecf-ddcf-46a3-c449-5c31251433a7"
+      },
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.95,\n",
+              " 'Fusca': 150000}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 125
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2223,36 +2283,101 @@
       "metadata": {
         "id": "X9F7OB3eD1AS"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "dadosCopy = dados.copy()"
+      ],
+      "execution_count": 126,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "v0rL0bveD1AS"
+        "id": "v0rL0bveD1AS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31ec10c1-7a2d-4649-cc41-6140c7567e69"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.95,\n",
+              " 'Fusca': 150000}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M-abRGGrD1AT"
+        "id": "M-abRGGrD1AT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "44670dbe-d975-4d48-d803-6895fe0238a3"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "del dadosCopy['Fusca']\n",
+        "dadosCopy"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.95}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ETBD0TkND1AU"
+        "id": "ETBD0TkND1AU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b43c24e4-f9a9-4f35-cabf-351470d069fd"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados"
+      ],
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.95,\n",
+              " 'Fusca': 150000}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2268,83 +2393,176 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_4QEPwScD1AW"
+        "id": "_4QEPwScD1AW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5b7a67f1-e7d3-4f68-911c-b07aa129ac7b"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64,\n",
+              " 'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Passat': 106161.95}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hjh0MuymD1AX"
+        "id": "Hjh0MuymD1AX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa3a7472-ca62-476f-cce3-c9faf753167e"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy.pop('Passat')"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "106161.95"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f51rKjkuD1AX"
+        "id": "f51rKjkuD1AX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25285cb3-0f36-4e63-ba7c-1141a8fc1b8d"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16, 'DS5': 124549.07}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 133
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Ah4sZ7axD1AZ"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "# dadosCopy.pop('Passat')"
+      ],
+      "execution_count": 135,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SJATRY8RD1Aa"
+        "id": "SJATRY8RD1Aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "5ab58035-f0b0-474b-e160-ba4ebe95d221"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy.pop('Passat','Chave não encontrada')"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Chave não encontrada'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V36wHdzmD1Ab"
+        "id": "V36wHdzmD1Ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c188a25-c94d-45ed-9176-5cd129ecd67a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy.pop('DS5','Chave não encontrada')"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "124549.07"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LJ0lQIrdD1Ac"
+        "id": "LJ0lQIrdD1Ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f11f5cd2-f84a-4935-c53b-caa2de84845c"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yKGu-fYkD1Ad"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "x-h8nVyhD1Af"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2362,18 +2580,37 @@
       "metadata": {
         "id": "AvkP_8mND1Ag"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "dadosCopy.clear()"
+      ],
+      "execution_count": 139,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S69pMYboD1Ah"
+        "id": "S69pMYboD1Ah",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46390af5-fc6b-4b82-9c6c-b1796102a129"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dadosCopy"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2382,6 +2619,37 @@
       },
       "source": [
         "# 3.4 Iterando em dicionários"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dados = {'Crossfox': 72832.16, 'DS5': 124549.07, 'Fusca': 150000, 'Jetta Variant': 88078.64, 'Passat': 106161.95}\n",
+        "dados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6nrc9LNNwlJ9",
+        "outputId": "c4a32ece-8a2f-4253-c1a8-1d11f636aa07"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Crossfox': 72832.16,\n",
+              " 'DS5': 124549.07,\n",
+              " 'Fusca': 150000,\n",
+              " 'Jetta Variant': 88078.64,\n",
+              " 'Passat': 106161.95}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 141
+        }
       ]
     },
     {
@@ -2398,20 +2666,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qFADEYmBD1Aj"
+        "id": "qFADEYmBD1Aj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "65bbb01b-c150-445b-b341-d4d3037852cf"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados.keys()"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['Crossfox', 'DS5', 'Fusca', 'Jetta Variant', 'Passat'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "niwh9AgDD1Aj"
+        "id": "niwh9AgDD1Aj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b80a07f-4d8e-419d-9c67-d124a791e3e7"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for key in dados.keys():\n",
+        "  print(dados[key])"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "72832.16\n",
+            "124549.07\n",
+            "150000\n",
+            "88078.64\n",
+            "106161.95\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2427,11 +2731,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nfpLxrQVD1Al"
+        "id": "nfpLxrQVD1Al",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4202e43-fcb5-4854-9581-826b330fac7a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados.values()"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values([72832.16, 124549.07, 150000, 88078.64, 106161.95])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2447,38 +2768,111 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q2I9_6YvD1Am"
+        "id": "Q2I9_6YvD1Am",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26a1f2cd-40ae-4579-8300-048478129d9f"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "dados.items()"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('Crossfox', 72832.16), ('DS5', 124549.07), ('Fusca', 150000), ('Jetta Variant', 88078.64), ('Passat', 106161.95)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0j41ZqgQD1Am"
+        "id": "0j41ZqgQD1Am",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fb52e2a-fea3-49f7-c45e-c2c510c8994e"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for item in dados.items():\n",
+        "  print(item)"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Crossfox', 72832.16)\n",
+            "('DS5', 124549.07)\n",
+            "('Fusca', 150000)\n",
+            "('Jetta Variant', 88078.64)\n",
+            "('Passat', 106161.95)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OVY9rIwFD1An"
+        "id": "OVY9rIwFD1An",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f885fb1b-ae54-48a1-c4ba-0657f125d2cb"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for key, value in dados.items():\n",
+        "  print(key, value)"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Crossfox 72832.16\n",
+            "DS5 124549.07\n",
+            "Fusca 150000\n",
+            "Jetta Variant 88078.64\n",
+            "Passat 106161.95\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ma2Ol8vcD1Ap"
+        "id": "ma2Ol8vcD1Ap",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f175cd4e-55cb-45cf-b21b-5364b895f138"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for key, value in dados.items():\n",
+        "  if (value > 100000):\n",
+        "    print (key)"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DS5\n",
+            "Fusca\n",
+            "Passat\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
