--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -25,7 +25,6 @@
         "htjoBLwiD0_F",
         "xo76nR8rD0_0",
         "-q3AlSg3D1Aq",
-        "5CfEcU58D1Aq",
         "6w62Sl5ZD1A0",
         "OADZiBP2D1A0",
         "PwSlYSVAD1A2",
@@ -2902,68 +2901,184 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DP7cmY7xD1Aq"
+        "id": "DP7cmY7xD1Aq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3250e8d-526c-41fb-f5c6-36da1acb6482"
       },
       "source": [
         "dados = {'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}\n",
         "dados"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 149
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5zAcGSCbD1Ar"
+        "id": "5zAcGSCbD1Ar",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "12de81dd-4018-4fdf-f3d1-3898b0e5448d"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "valores = []\n",
+        "for valor in dados.values():\n",
+        "  valores.append(valor)\n",
+        "valores"
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[88078.64, 106161.94, 72832.16]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 153
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zG9_jU_1D1At"
+        "id": "zG9_jU_1D1At",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e1dc14c2-259e-4c10-febd-348daa934598"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "soma = 0\n",
+        "for valor in dados.values():\n",
+        "  soma += valor\n",
+        "soma"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "267072.74"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 154
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jn0O3uXZD1Au"
+        "id": "jn0O3uXZD1Au",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0b8bd1cd-072d-4ac6-fef2-f6d6be1bb860"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "list(dados.values())"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[88078.64, 106161.94, 72832.16]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lnUjKVnoD1Aw"
+        "id": "lnUjKVnoD1Aw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd93696f-bb6d-4d24-898c-1231cb116b97"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "sum(dados.values())"
+      ],
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "267072.74"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 161
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "scrolled": false,
-        "id": "WdEuYXe2D1Ay"
+        "id": "WdEuYXe2D1Ay",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "534d813c-d41c-4c7a-ee05-5e62e3d6a357"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "help(print)"
+      ],
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function print in module builtins:\n",
+            "\n",
+            "print(...)\n",
+            "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+            "    \n",
+            "    Prints the values to a stream, or to sys.stdout by default.\n",
+            "    Optional keyword arguments:\n",
+            "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+            "    sep:   string inserted between values, default a space.\n",
+            "    end:   string appended after the last value, default a newline.\n",
+            "    flush: whether to forcibly flush the stream.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "hIA29O3tD1Az"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "print?"
+      ],
+      "execution_count": 165,
       "outputs": []
     },
     {
