Definindo funções sem e com parâmetros

--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -1680,7 +1680,7 @@
         "carros = ['Jetta Variant', 'Passat', 'Crossfox']\n",
         "carros"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1707,7 +1707,7 @@
         "valores = [88078.64, 106161.94, 72832.16]\n",
         "valores"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1733,7 +1733,7 @@
       "source": [
         "carros.index('Passat')"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1759,7 +1759,7 @@
       "source": [
         "valores[carros.index('Passat')]"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1786,7 +1786,7 @@
         "dados = {'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}\n",
         "dados"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1812,7 +1812,7 @@
         "id": "Jk7b0NFqpmTR",
         "outputId": "b19cd834-d1a1-4b87-8167-e2dcf503a0fc"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1847,7 @@
       "source": [
         "list(zip(carros,valores))"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1874,7 +1874,7 @@
         "dados = dict(zip(carros,valores))\n",
         "dados"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1920,7 +1920,7 @@
       "source": [
         "dados['Passat']"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1957,7 +1957,7 @@
       "source": [
         "'Passat' in dados"
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +1983,7 @@
       "source": [
         "'Fusca' in dados"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2009,7 +2009,7 @@
       "source": [
         "'Fusca' not in dados"
       ],
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2046,7 +2046,7 @@
       "source": [
         "len(dados)"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2079,7 +2079,7 @@
       "source": [
         "dados['DS5'] = 124549.07"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2094,7 +2094,7 @@
       "source": [
         "dados"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2130,7 +2130,7 @@
       "source": [
         "del dados['Passat']"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2145,7 +2145,7 @@
       "source": [
         "dados"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2191,7 +2191,7 @@
       "source": [
         "dados"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2218,7 +2218,7 @@
         "dados.update({'Passat': 106161.94})\n",
         "dados"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2248,7 +2248,7 @@
         "id": "f5tRzZqdultt",
         "outputId": "84c4eecf-ddcf-46a3-c449-5c31251433a7"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2285,7 +2285,7 @@
       "source": [
         "dadosCopy = dados.copy()"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2300,7 +2300,7 @@
       "source": [
         "dadosCopy"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2331,7 +2331,7 @@
         "del dadosCopy['Fusca']\n",
         "dadosCopy"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2360,7 +2360,7 @@
       "source": [
         "dados"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2401,7 +2401,7 @@
       "source": [
         "dadosCopy"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2430,7 +2430,7 @@
       "source": [
         "dadosCopy.pop('Passat')"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2456,7 +2456,7 @@
       "source": [
         "dadosCopy"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2478,7 +2478,7 @@
       "source": [
         "# dadosCopy.pop('Passat')"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2494,7 +2494,7 @@
       "source": [
         "dadosCopy.pop('Passat','Chave não encontrada')"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2523,7 +2523,7 @@
       "source": [
         "dadosCopy.pop('DS5','Chave não encontrada')"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2549,7 +2549,7 @@
       "source": [
         "dadosCopy"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2582,7 +2582,7 @@
       "source": [
         "dadosCopy.clear()"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2597,7 +2597,7 @@
       "source": [
         "dadosCopy"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2633,7 +2633,7 @@
         "id": "6nrc9LNNwlJ9",
         "outputId": "c4a32ece-8a2f-4253-c1a8-1d11f636aa07"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2674,7 +2674,7 @@
       "source": [
         "dados.keys()"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2701,7 +2701,7 @@
         "for key in dados.keys():\n",
         "  print(dados[key])"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2739,7 +2739,7 @@
       "source": [
         "dados.values()"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2776,7 +2776,7 @@
       "source": [
         "dados.items()"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2803,7 +2803,7 @@
         "for item in dados.items():\n",
         "  print(item)"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2831,7 +2831,7 @@
         "for key, value in dados.items():\n",
         "  print(key, value)"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2860,7 +2860,7 @@
         "  if (value > 100000):\n",
         "    print (key)"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2911,7 +2911,7 @@
         "dados = {'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}\n",
         "dados"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2940,7 +2940,7 @@
         "  valores.append(valor)\n",
         "valores"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2969,7 +2969,7 @@
         "  soma += valor\n",
         "soma"
       ],
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2995,7 +2995,7 @@
       "source": [
         "list(dados.values())"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3021,7 +3021,7 @@
       "source": [
         "sum(dados.values())"
       ],
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3048,7 +3048,7 @@
       "source": [
         "help(print)"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3078,7 +3078,7 @@
       "source": [
         "print?"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3111,18 +3111,36 @@
       "metadata": {
         "id": "uCkplEpQD1A0"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def media():\n",
+        "  valor = (1+2+3) / 3\n",
+        "  print(valor)"
+      ],
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fOCEGq5VD1A1"
+        "id": "fOCEGq5VD1A1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8e95d7a-323e-41fc-dd92-67afacffdb62"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3145,63 +3163,155 @@
       "metadata": {
         "id": "A3YnBUduD1A3"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def media (number_1,number_2,number_3):\n",
+        "  valor = (number_1 + number_2 + number_3) / 3\n",
+        "  print(valor)"
+      ],
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rGUZbRERD1A3"
+        "id": "rGUZbRERD1A3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7984940-f1d3-4b90-8b33-eb73e21b7dbf"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media(1,2,3)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B9WDlRE7D1A5"
+        "id": "B9WDlRE7D1A5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3adbcb8-051b-4099-9d41-086aaf2c1eaa"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media(23,45,67)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1HAy8OK_D1A6"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def media(lista):\n",
+        "  valor = sum(lista) / len(lista)\n",
+        "  print(valor)"
+      ],
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_CDa4oOfD1A6"
+        "id": "_CDa4oOfD1A6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42848201-e0fc-4b04-d6cd-f78a983c1f64"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media([1,2,3,4,5,6,7,8,9])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xH-mxqYAD1A8"
+        "id": "xH-mxqYAD1A8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cbcf041d-2a77-401b-e2db-7233ccbbdd56"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "resultado = media([1,2,3,4,5,6,7,8,9])"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "WXXC_UidD1A8"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "resultado"
+      ],
+      "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(resultado)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sQiRijMl9a8V",
+        "outputId": "e3a8ebd0-3b48-40f2-d3a7-34b837d46a69"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NoneType"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
